--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/SwiperCurousel.tsx", "constants/index.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/SwiperCurousel.tsx", "constants/index.js", "utils/methods/get.js"],
   "exclude": ["node_modules"]
 }
